--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,7 +2,6 @@
     width: 75%;
     margin: 3rem auto;
 }
-
 .header-container {
     display: flex;
     justify-content: space-between;
@@ -14,6 +13,11 @@
     grid-template-columns: auto auto auto;
     width: 600px;
     height: 600px;
-    gap: 1rem;
+    gap: 2rem;
     margin: 3rem auto;
+}
+
+.result-container {
+    display: flex;
+    justify-content: space-between;
 }
