--- a/src/Components/Field.module.css
+++ b/src/Components/Field.module.css
@@ -3,4 +3,9 @@
     aspect-ratio: 1/1;
     border-radius: 10px;
     box-shadow: 0 .5rem #122029;
+    cursor: pointer;
+}
+
+.container:hover {
+    background-color: #2c414d;
 }
