--- a/src/Components/Header/PlayerInformation.module.css
+++ b/src/Components/Header/PlayerInformation.module.css
@@ -1,11 +1,15 @@
 .container {
+    flex-basis: 33.33%;
+}
+
+.player-container {
     display: flex;
     align-items: center;
     gap: .5rem;
 }
 
-.container:first-child {
-    margin-bottom: 1.25rem;
+.player-container:first-child {
+    margin-bottom: 1rem;
 }
 
 .text {
