--- a/src/Components/Header/ResartButton.module.css
+++ b/src/Components/Header/ResartButton.module.css
@@ -1,13 +1,16 @@
 .container {
-    background-color: #acbec7;
-    width: fit-content;
-    padding: 0.3rem 1rem;
-    text-align: center;
-    border-radius: 5px;
-    cursor: pointer;
-    box-shadow: 0 .4rem #738892;
+    flex-basis: 33.33%;
+    text-align: end;
 }
 
-.container:hover {
-    background-color:#dfeef4;;
+.icon {
+    background-color: #acbec7;
+    padding: .75rem;
+    border-radius: 5px;
+    box-shadow: 0 .4rem #738892;
+    cursor: pointer;
+}
+
+.icon:hover {
+    background-color:#dfeef4;
 }
