Make player decider on fields starting player bug fix

--- a/src/Components/Fields/Field.module.css
+++ b/src/Components/Fields/Field.module.css
@@ -4,6 +4,9 @@
     border-radius: 10px;
     box-shadow: 0 .5rem #122029;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .container:hover {
