--- a/src/Components/Fields/Field.module.css
+++ b/src/Components/Fields/Field.module.css
@@ -3,12 +3,26 @@
     aspect-ratio: 1/1;
     border-radius: 10px;
     box-shadow: 0 .5rem #122029;
-    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.container:hover {
+.default{
+    cursor: pointer;
+}
+
+.default:hover {
     background-color: #2c414d;
+}
+
+.win {
+    animation-name: win;
+    animation-iteration-count: infinite;
+    animation-duration: .8s;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes win {
+    100% {background-color: rgb(128, 172, 40);}
 }
