--- a/src/Components/Fields/FieldContainer.module.css
+++ b/src/Components/Fields/FieldContainer.module.css
@@ -1,8 +1,8 @@
-.field-container {
+.container {
+    margin: 3rem auto; 
     display: grid;
     grid-template-columns: auto auto auto;
-    width: 600px;
-    height: 600px;
+    width: 60rem;
+    height: 60rem;
     gap: 2rem;
-    margin: 3rem auto;
 }
